--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2 class="gold">Remember!</h2>
         <div class="fragment">
           <p class="big_p"><i>&ldquo;You have a right to be here.&rdquo;</i></p>
-          <p class="meta tiny_meta">&mdash;Max Ehrmann</p>
+          <p class="meta tiny_meta">&mdash;Max Ehrmann, &ldquo;Desiderata&rdquo;</p>
         </div>
       </section>
 
