add buildingWithBootstrap hashtag

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
     <footer>
       <div id="twitter">
         <i class="fa fa-twitter"></i>
-        @GDImpls &bull; #gdi
+        @GDImpls &bull; #gdi &bull; #buildingWithBootstrap
       </div>
     </footer><!-- /footer -->
   </div>
