--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
       <section>
         <h1 class="uppercase no_margin" style="font-size: 60px;">Building With Bootstrap</h1>
-        <div class="meta blue uppercase small_meta">2016-07-30 &#8729; GDI MPLS &#8729; Clare O&rsquo;Neill</div>
+        <div class="meta blue uppercase small_meta">2017-06-10 &#8729; GDI MPLS &#8729; Clare O&rsquo;Neill</div>
         <img src="assets/images/gdi_logo_badge.png" class="top_margin width_50" style="width:25%;">
 
         <div class="spacer"></div>
@@ -47,7 +47,7 @@
             <li>We are here for you!</li>
             <li>Every question is important</li>
             <li>Help each other</li>
-            <li>Have fun</li>
+            <li>Have fun!</li>
           </ul>
         </div>
       </section><!-- /welcome -->
@@ -180,14 +180,13 @@
 
       <section>
         <h3 class="blue">JavaScript</h3>
-        <p class="fragment">jQuery-based JavaScript plugins for interactive elements such as tooltips, modal windows, and carousels</p>
+        <p class="fragment">jQuery-powered JavaScript plugins for interactive elements such as tooltips, modal windows, and carousels</p>
         <span class="fragment meta tiny_meta">If we have time, we’ll be using the Scrollspy plugin</span>
       </section><!-- /javascript -->
 
       <section>
         <h2 class="gold">Let&rsquo;s talk about the Bootstrap grid system</h2>
         <p class="fragment big_p">Bootstrap&rsquo;s grid system is its most powerful and widely used feature.</p>
-        <span class="fragment meta tiny_meta">That&rsquo;s not a fact I can prove, but I&rsquo;m like 99.99999% sure its true!</span>
       </section><!-- /the grid system -->
 
       <section>
@@ -288,7 +287,7 @@
       </section><!-- /2 col-xs-6 -->
 
       <section>
-        <p>If you want to have four 25% columns on a desktop, and would like them to break to 100% on a tablet, you would use <span class="inline_code">.col-md-3</span> nested in a .row.</p>
+        <p>If you want to have four 25% columns on a desktop screen size, and would like them to break to 100% on a tablet, you would use <span class="inline_code">.col-md-3</span> nested in a .row.</p>
         <img src="assets/images/4-col-md-3.png" alt="4 .col-md-3 elements" style="width: 750px;">
       </section><!-- /4 col-md-3 -->
 
@@ -326,7 +325,7 @@
       <section>
         <p>Open <span class="inline_code">slide-demo/demo.html</span> in Sublime Text.</p>
         <hr>
-        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">slide-demo/css/</span> folder.</p>
+        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.7-dist/</span> folder we downloaded, and add it to the <span class="inline_code">slide-demo/css/</span> folder.</p>
         <hr>
         <p class="fragment">Add it to the <span class="inline_code">head</span> of <span class="inline_ccode">index.html</span>.<br><span class="span meta tiny_meta">Remember to use the relative path!</span></p>
         <div class="fragment">
@@ -447,15 +446,15 @@
       <section>
         <p>Open <span class="inline_code">resume/index.html</span> in Sublime Text.</p>
         <hr>
-        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/css/</span> folder.</p>
+        <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.7-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/css/</span> folder.</p>
         <hr>
-        <p class="fragment">Find the <span class="inline_code">fonts/</span> directory inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/</span> folder.</p>
+        <p class="fragment">Find the <span class="inline_code">fonts/</span> directory inside the <span class="inline_code">bootstrap-3.3.7-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/</span> folder.</p>
       </section><!-- add bootstrap css -->
 
       <section>
         <p>In order for our navbar to work on mobile, we&rsquo;ll need Bootstrap&rsquo;s JavaScript as well.</p>
         <hr>
-        <p class="fragment">Find <span class="inline_code">bootstrap.js</span> inside the <span class="inline_code">bootstrap-3.3.6-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/js/</span> folder.</p>
+        <p class="fragment">Find <span class="inline_code">bootstrap.js</span> inside the <span class="inline_code">bootstrap-3.3.7-dist/</span> folder we downloaded, and add it to the <span class="inline_code">resume/js/</span> folder.</p>
       </section>
 
       <section>
@@ -529,6 +528,7 @@
             &lt;/button&gt;
           </code>
         </pre>
+        <span class="span meta tiny_meta fragment"><br>Make sure to change the button&rsquo;s <span class="inline_code">data-target</span> attribute to <span class="inline_code">#navbar</span>.</span>
       </section><!-- /nav continued -->
 
       <section>
@@ -543,6 +543,7 @@
             &lt;/div&gt;
           </code>
         </pre>
+        <span class="span meta tiny_meta fragment"><br>Make sure to change the div&rsquo;s <span class="inline_code">id</span> to be <span class="inline_code">navbar</span>.</span>
       </section><!-- /nav continued -->
 
       <section>
@@ -567,7 +568,7 @@
         <h2 class="gold">Jumbotron</h2>
         <p class="fragment">Add a jumbotron element after the <span class="inline_code">&lt;nav&gt;</span></p>
         <hr>
-        <p class="fragment">Inside the jumbotron, add a <span class="inline_code">h1</span> with your name, and a paragraph element with your job title.</p>
+        <p class="fragment">Inside the jumbotron, add an <span class="inline_code">h1</span> with your name, and a paragraph element with your job title.</p>
         <hr>
         <p class="fragment">Make your job title stand out with a <span class="inline_code">.lead</span> class.</p>
       </section><!-- /jumbotron -->
@@ -665,7 +666,8 @@
 
       <section>
         <h2 class="gold">About</h2>
-        <p class="fragment">In the smaller column, add your email and phone number with the corresponding glyphicon for each (refer to the documentation).</p>
+        <p class="fragment">In the smaller column, create an unordered list element that is styled to have <i>no bullets</i>.<br><span class="span meta tiny_meta">Browse the docs to find a class that will do this for you.</span></p>
+        <p class="fragment">Add your email and phone number as list items. Start each list item with the corresponding glyphicon.<br><span class="span meta tiny_meta">Refer to the documentation, again! (Are you seeing a pattern here?)</span></p>
         <hr>
         <p class="fragment"><i>Extra credit:</i> Add your address with a matching glyphicon as well.</p>
       </section>
@@ -719,11 +721,11 @@
         <h2 class="gold">Experience</h2>
         <p class="fragment">Add a new <span class="inline_code">.row</span> inside the content column.</p>
         <hr>
-        <p class="fragment">Create 2 columns, one that spans 1/4 of the container and and one that spans 3/4 of the container. Both of them should break down to 100% on medium devices.</p>
+        <p class="fragment">Create 2 columns, one that spans 1/4 of the container and and one that spans 3/4 of the container. Both of them should break down to 100% on small devices.</p>
         <hr>
-        <p class="fragment">In the larger column add a company name inside a <span class="inline_code">h3</span>, followed by your job title inside a <span class="inline_code">h4</span>, followed by a paragraph with a brief description of the job.</p>
+        <p class="fragment">In the larger column add a company name inside an <span class="inline_code">h3</span>, followed by your job title inside an <span class="inline_code">h4</span>, followed by a paragraph with a brief description of the job.</p>
         <hr>
-        <p class="fragment">Inside the smaller column add a <span class="inline_code">h5</span> with the date range of your employment with the company.</p>
+        <p class="fragment">Inside the smaller column add an <span class="inline_code">h5</span> with the date range of your employment with the company.</p>
       </section>
 
       <section>
@@ -752,7 +754,7 @@
 
       <section>
         <h2 class="gold">Portfolio</h2>
-        <p class="fragment">Create three columns that each take up 1/3 of the container width. They should break down to 100% on small screens.</p>
+        <p class="fragment">Inside the content column, create three columns that each take up 1/3 of the container width. They should break down to 100% on small screens.</p>
         <hr>
         <p class="fragment">Inside each column add a <span class="inline_code">.thumbnail</span> div with a <span class="inline_code">.text-center</span> class.</p>
         <hr>
@@ -767,7 +769,7 @@
               &lt;div class="col-sm-4"&gt;
                 &lt;div class="thumbnail text-center"&gt;
                   &lt;img src="image.jpg" alt="HTML &amp; CSS" class="img-responsive"&gt;
-                  &lt;h4&gt;Project A&lt;/h4&gt;
+                  &lt;h4&gt;Project&lt;/h4&gt;
                   &lt;h5&gt;HTML &amp; CSS&lt;/h5&gt;
                 &lt;/div&gt;
               &lt;/div&gt;
@@ -782,7 +784,7 @@
         <h2 class="gold">Footer</h2>
         <p class="fragment">Add a footer with a nested <span class="inline_code">.container</span></p>
         <hr>
-        <p class="fragment">Add a copyright (<span class="inline_code">&amp;copy;</span>) inside a <span class="inline_code">&lt;small&gt;</span> element.</p>
+        <p class="fragment">Add a copyright symbol (<span class="inline_code">&amp;copy;</span>) inside a <span class="inline_code">&lt;small&gt;</span> element.</p>
         <hr>
         <p class="fragment">Center the copyright.</p>
       </section>
@@ -793,7 +795,7 @@
           <code class="language-markup">
             &lt;footer&gt;
                &lt;div class="container text-center"&gt;
-                 &lt;small&gt;&amp;copy; 2016 Your Name&lt;/small&gt;
+                 &lt;small&gt;&amp;copy; 2017 Your Name&lt;/small&gt;
                &lt;/div&gt;
              &lt;/footer&gt;
           </code>
@@ -831,12 +833,12 @@
         <hr>
         <p class="fragment">Find it in <span class="inline_code">resume-source-code/css/styles.css</span>. Copy and paste the file into the <span class="inline_code">resume/css/</span> folder, then add it to the <span class="inline_code">head</span> of your resume site.</p>
         <hr>
-        <p class="fragment">Refresh your browser to see how a few extra lines of CSS can change the site.</p>
+        <p class="fragment">Refresh your browser to see how just a few extra lines of CSS can totally transform your site.</p>
       </section><!-- /finishing up -->
 
       <section>
         <h2 class="gold">BONUS: Adding some JavaScript</h2>
-        <p class="fragment">The JavaScript plugin we&rsquo;re going to use is called Scrollspy, but all Bootstrap&rsquo;s JavaScript comes packaged in one file together.</p>
+        <p class="fragment">The JavaScript plugin we&rsquo;re going to use is called Scrollspy, but all of Bootstrap&rsquo;s JavaScript comes packaged in one file together.</p>
         <p class="fragment">Scrollspy works by targetting the links inside an element we select.</p>
         <p class="fragment">The easiest and fastest way to do that is to use an element&rsquo;s ID.</p>
       </section><!-- /javascript -->
