--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <section>
         <h5 class="uppercase gold">What is Bootstrap?</h5>
         <p class="big_p">Bootstrap is one of the most popular front end frameworks with 95,000+ stars and over 41,000 forks.</p>
-        <img src="assets/images/github.jpg" alt="Bootstrap is one of the most popular front end frameworks with 95,000+ stars and over 41,000 forks on Github."/>
+        <img src="assets/images/github.png" alt="Bootstrap is one of the most popular front end frameworks with 95,000+ stars and over 41,000 forks on Github."/>
         <p class="fragment big_p">It&rsquo;s an open source project on GitHub, meaning it is free to use and anyone can contribute to its progress.</p>
       </section><!-- open source -->
 
