update index.html to demo.html

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <hr>
         <p class="fragment">Find <span class="inline_code">bootstrap.css</span> inside the <span class="inline_code">bootstrap-3.3.7-dist/</span> folder we downloaded, and add it to the <span class="inline_code">slide-demo/css/</span> folder.</p>
         <hr>
-        <p class="fragment">Add it to the <span class="inline_code">head</span> of <span class="inline_ccode">index.html</span>.<br><span class="span meta tiny_meta">Remember to use the relative path!</span></p>
+        <p class="fragment">Add it to the <span class="inline_code">head</span> of <span class="inline_ccode">demo.html</span>.<br><span class="span meta tiny_meta">Remember to use the relative path!</span></p>
         <div class="fragment">
           <pre>
             <code class="language-markup">
@@ -363,7 +363,7 @@
         </div>
         <p class="fragment meta tiny_meta"><i>Extra credit:</i> Create a 3-column layout that will break down to 100% on large devices.</p>
         <hr>
-        <p class="fragment">Open <span class="inline_code">index.html</span> in your browser and resize to see how the columns respond.</p>
+        <p class="fragment">Open <span class="inline_code">demo.html</span> in your browser and resize to see how the columns respond.</p>
       </section>
 
       <section>
