break up long slides

--- a/index.html
+++ b/index.html
@@ -610,8 +610,11 @@
         <hr>
         <p class="fragment">Create 2 columns, one that spans 1/4 of the container and and one that spans 3/4 of the container. Both of them should break down to 100% on small devices.<br><span class="meta tiny_meta">Remember the <span class="inline_code">.row</span>!</span></p>
         <hr>
-        <div class="fragment">
-          <p>Let&rsquo;s add some comments to describe what content we want to put inside each column.</p>
+      </section>
+
+      <section>
+        <h2 class="gold">Setting up our sections</h2>
+        <p>Let&rsquo;s add some comments to describe what content we want to put inside each column.</p>
           <pre>
             <code class="language-markup">
               &lt;!-- title column --&gt;
@@ -620,7 +623,6 @@
               &lt;div class="col-md-9"&gt;&lt;/div&gt;
             </code>
           </pre>
-        </div>
       </section>
 
       <section>
@@ -723,7 +725,11 @@
         <hr>
         <p class="fragment">Create 2 columns, one that spans 1/4 of the container and and one that spans 3/4 of the container. Both of them should break down to 100% on small devices.</p>
         <hr>
-        <p class="fragment">In the larger column add a company name inside an <span class="inline_code">h3</span>, followed by your job title inside an <span class="inline_code">h4</span>, followed by a paragraph with a brief description of the job.</p>
+      </section>
+
+      <section>
+        <h2 class="gold">Experience</h2>
+        <p>In the larger column add a company name inside an <span class="inline_code">h3</span>, followed by your job title inside an <span class="inline_code">h4</span>, followed by a paragraph with a brief description of the job.</p>
         <hr>
         <p class="fragment">Inside the smaller column add an <span class="inline_code">h5</span> with the date range of your employment with the company.</p>
       </section>
