fix survey link

--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 
       <section>
         <h2 class="gold">Take our survey</h2>
-        <p class="big_p"><a href="bit.ly/building-with-bootstrap">bit.ly/building-with-bootstrap</a></p>
+        <p class="big_p"><a href="https://bit.ly/building-with-bootstrap">bit.ly/building-with-bootstrap</a></p>
       </section><!-- /survey -->
     </div><!-- /slides -->
 
