add slide about meta viewport tag

--- a/index.html
+++ b/index.html
@@ -384,6 +384,16 @@
       </section><!-- /media queries -->
 
       <section>
+        <h2 class="gold">A note about using media queries</h2>
+        <p class="fragment">Most responsive designs require the viewport meta tag to work well on phones and tablets, which may need to resize things because of a smaller viewport. It should be part of the standard web page boilerplate.</p>
+        <pre class="fragment">
+          <code class="language-markup">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+          </code>
+        </pre>
+      </section><!-- /media queries -->
+
+      <section>
         <h2 class="gold">A couple basic Bootstrap components</h2>
       </section><!-- /basic bootstrap components -->
 
