fix meta tag code

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <p class="fragment">Most responsive designs require the viewport meta tag to work well on phones and tablets, which may need to resize things because of a smaller viewport. It should be part of the standard web page boilerplate.</p>
         <pre class="fragment">
           <code class="language-markup">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
+            &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
           </code>
         </pre>
       </section><!-- /media queries -->
