update viewport slide

--- a/index.html
+++ b/index.html
@@ -385,12 +385,15 @@
 
       <section>
         <h2 class="gold">A note about using media queries</h2>
-        <p class="fragment">Most responsive designs require the viewport meta tag to work well on phones and tablets, which may need to resize things because of a smaller viewport. It should be part of the standard web page boilerplate.</p>
+        <p class="fragment">From Google:</p>
+        <p class="fragment"><i>&ldquo;Without a viewport, mobile devices will render the page at a typical desktop screen width, scaled to fill the screen.</i></p>
+        <p class="fragment"><i>Setting a viewport gives control over the page&rsquo;s width and scaling on different devices.&rdquo;</i></p>
         <pre class="fragment">
           <code class="language-markup">
             &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
           </code>
         </pre>
+        <span class="span meta tiny_meta"><br><a href="https://developers.google.com/speed/docs/insights/ConfigureViewport" target="_blank">Source</a></span>
       </section><!-- /media queries -->
 
       <section>
