--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
           </code>
         </pre>
-        <span class="span meta tiny_meta"><br><a href="https://developers.google.com/speed/docs/insights/ConfigureViewport" target="_blank">Source</a></span>
+        <span class="span meta tiny_meta fragment"><br><a href="https://developers.google.com/speed/docs/insights/ConfigureViewport" target="_blank">Source</a></span>
       </section><!-- /media queries -->
 
       <section>
